--- a/index.html
+++ b/index.html
@@ -867,19 +867,19 @@ img.emoji {
 			<div class="col-md-4">
 			<div class="contact-details wow fadeInDown" data-wow-duration="1s">
 			<p class="contact-info text-capitalize text-center"><i class="fa fa-map-marker icon-left" aria-hidden="true"></i>Address</p>
-			<p class="text-regular text-capitalize text-center margin-remove">Elephent Road, Dhaka 1205, Bangladesh</p>
+			<p class="text-regular text-capitalize text-center margin-remove">Uma Elumalaiyan Thirumana Mandapam, Belliyappa Nagar, Opp.to A.A.A Womens College Walajapet, Vellore District.</p>
 			</div>
 			</div>
 			<div class="col-md-4">
 			<div class="contact-details wow fadeInDown" data-wow-duration="2s">
 			<p class="contact-info text-capitalize text-center"><i class="fa fa-map-marker icon-left" aria-hidden="true"></i>Phone</p>
-			<p class="text-regular text-capitalize text-center margin-remove">+88012-47589245</p>
+			<p class="text-regular text-capitalize text-center margin-remove">+91 9659099980</p>
 			</div>
 			</div>
 			<div class="col-md-4">
 			<div class="contact-details wow fadeInDown" data-wow-duration="3s">
-			<p class="contact-info text-capitalize text-center"><i class="fa fa-map-marker icon-left" aria-hidden="true"></i>Email</p>
-			<p class="text-regular text-capitalize text-center margin-remove">Yourmail@Mail.Com</p>
+			<p class="contact-info text-capitalize text-center"><i class="fa fa-map-marker icon-left" aria-hidden="true"></i>Google Map</p>
+			<p class="text-regular text-capitalize text-center margin-remove">https://maps.app.goo.gl/Rk6EJ</p>
 			</div>
 			</div>
 			</div>
