--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@ img.emoji {
 			<div class="col-md-4">
 			<div class="contact-details wow fadeInDown" data-wow-duration="3s">
 			<p class="contact-info text-capitalize text-center"><i class="fa fa-map-marker icon-left" aria-hidden="true"></i>Google Map</p>
-			<p class="text-regular text-capitalize text-center margin-remove">https://maps.app.goo.gl/Rk6EJ</p>
+			<p class="text-regular text-capitalize text-center margin-remove"><a href="https://maps.app.goo.gl/Rk6EJ" target="_blank">https://maps.app.goo.gl/Rk6EJ</a></p>
 			</div>
 			</div>
 			</div>
