--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@ img.emoji {
 			</div>
 			</div>
 			<div class="overlay-figcap full-height flex-container flex-column flex-middle flex-center">
-			<h4 class="text-capitalize section-subtitle font-24">Bride Brother Friends</h4>
+			<h4 class="text-capitalize section-subtitle font-24">Groom Brother Friends</h4>
 			<p class="text-regular"><i class="fa fa-tag icon-left" aria-hidden="true"></i>wedding </p>
 			</div>
 			</figcaption>
