--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@ img.emoji {
             </div>
 			
             <div class="copy-right bg-blackish">
-                <p class="text-copy-right text-center margin-remove"><span class="text-white">Developed by Black Virus </span> <a href="www.3jon.html"><span class="text-pink"></span></a></p>
+                <p class="text-copy-right text-center margin-remove"><span class="text-white">Developed by <u><a href="https://www.instagram.com/praveenrock741/" target="_blank">Black Virus</a></u> </span> <a href="www.3jon.html"><span class="text-pink"></span></a></p>
             </div>
         </footer>
 
